--- a/index.html
+++ b/index.html
@@ -5,7 +5,14 @@
   <link rel="icon" type="image/x-icon" href="squidward.jpg">
 </head>
 <body>
-
+  <style>
+    body {
+      background-image: url('backgroud.png');
+      background-repeat: no-repeat;
+      background-attachment: fixed;
+      background-size: 100% 100%;
+    }
+    </style>
 <h1>This is a Heading</h1>
 <p>This is a paragraph.</p>
 
