--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
   <style>
     body {
-      background-image: url('backgroud.png');
+      background-image: url('background.png');
       background-repeat: no-repeat;
       background-attachment: fixed;
       background-size: 100% 100%;
